noinst_LTLIBRARIES = libThePEGWaveFunction.la
libThePEGWaveFunction_la_SOURCES = \
RSSpinorBarWaveFunction.cc RSSpinorBarWaveFunction.h RSSpinorBarWaveFunction.icc \
RSSpinorWaveFunction.cc RSSpinorWaveFunction.h RSSpinorWaveFunction.icc \
ScalarWaveFunction.h \
SpinorBarWaveFunction.cc SpinorBarWaveFunction.h\
SpinorWaveFunction.cc SpinorWaveFunction.h \
TensorWaveFunction.cc TensorWaveFunction.h \
VectorWaveFunction.cc VectorWaveFunction.h \
WaveFunctionBase.h
