noinst_LTLIBRARIES = libThePEGSVertex.la
libThePEGSVertex_la_SOURCES = \
FFSVertex.cc  FFSVertex.h  FFSVertex.fh   FFSVertex.icc \
SSSSVertex.cc SSSSVertex.h SSSSVertex.icc SSSSVertex.fh\
SSSVertex.cc SSSVertex.h SSSVertex.icc SSSVertex.fh \
VSSVertex.cc VSSVertex.h VSSVertex.icc VSSVertex.fh \
VVSSVertex.cc VVSSVertex.h VVSSVertex.icc VVSSVertex.fh \
VVSVertex.cc VVSVertex.h VVSVertex.icc VVSVertex.fh \
GeneralSVVVertex.cc GeneralSVVVertex.h GeneralSVVVertex.icc GeneralSVVVertex.fh
