noinst_LTLIBRARIES = libThePEGSVertex.la
libThePEGSVertex_la_SOURCES = \
FFSVertex.cc  FFSVertex.h  FFSVertex.fh \
SSSSVertex.cc SSSSVertex.h SSSSVertex.fh \
SSSVertex.cc  SSSVertex.h  SSSVertex.fh \
VSSVertex.cc  VSSVertex.h  VSSVertex.fh \
VVSSVertex.cc VVSSVertex.h VVSSVertex.fh \
VVSVertex.cc  VVSVertex.h  VVSVertex.fh \
GeneralSVVVertex.cc GeneralSVVVertex.h GeneralSVVVertex.icc GeneralSVVVertex.fh
